--- a/app/views/searches/_answer.html.slim
+++ b/app/views/searches/_answer.html.slim
@@ -1,3 +1,3 @@
 p
-  = link_to "Answer: #{object.body}", answer_path(object)
+  = link_to "Answer: #{object.body}", question_path(object.question)
 p #{object.body}
