--- a/app/views/common/_comments.html.slim
+++ b/app/views/common/_comments.html.slim
@@ -2,8 +2,9 @@
   p Comments:
   - resource.comments.each do |comment|
     - if comment.persisted?
-      li class='well list-group-item' id="question-comment-#{comment.id}"
-        = comment.body
-        .comment-delete
-          - if can? :destroy, comment
-            = link_to 'Delete comment', comment, method: :delete, remote: true
+      - cache comment
+        li class='well list-group-item' id="question-comment-#{comment.id}"
+          = comment.body
+          .comment-delete
+            - if can? :destroy, comment
+              = link_to 'Delete comment', comment, method: :delete, remote: true
