--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,4 +1,5 @@
-ul.list-group.questions-list
-  - @questions.each do |question|
-    li.list-group-item= link_to question.title, question_path(question), class: 'question-link'
-p= link_to 'Ask question', new_question_path
+- cache @questions
+  ul.list-group.questions-list
+    - @questions.each do |question|
+      li.list-group-item= link_to question.title, question_path(question), class: 'question-link'
+  p= link_to 'Ask question', new_question_path
