--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,56 +1,57 @@
-.panel.panel-default
-  .panel-heading
-    = @question.title
-  .panel-body
-    div class="question" data-id="#{@question.id}" id="question-#{@question.id}"
-      .question-body
-        = render @question, vote: @question_vote
-      ul.question-attachments
-        = render 'common/attachments', resource: @question
-      .comments
-        ul class="question-#{@question.id}-comments-list list-group"
-          = render 'common/comments', resource: @question
-        = render 'comments/comment_form', resource: @question, resource_name: 'question'
-      - if can? :create, Subscription
-        - if current_user.subscribed_to?(@question)
-          = link_to 'Unsubscribe', subscription_path(@subscription), method: :delete
-        - else
-          = link_to 'Subscribe', question_subscriptions_path(@question), method: :post
-      - if can? :destroy, @question
-        .edit-delete
-        = link_to 'Edit question', '', class: 'edit-question-link',
-          data: { question_id: @question.id }
-        '
-        = link_to 'Delete question', @question, method: :delete
-        = form_for @question, remote: true, html: { id: 'edit-question' } do |f|
+- cache @question
+  .panel.panel-default
+    .panel-heading
+      = @question.title
+    .panel-body
+      div class="question" data-id="#{@question.id}" id="question-#{@question.id}"
+        .question-body
+          = render @question, vote: @question_vote
+        ul.question-attachments
+          = render 'common/attachments', resource: @question
+        .comments
+          ul class="question-#{@question.id}-comments-list list-group"
+            = render 'common/comments', resource: @question
+          = render 'comments/comment_form', resource: @question, resource_name: 'question'
+        - if can? :create, Subscription
+          - if current_user.subscribed_to?(@question)
+            = link_to 'Unsubscribe', subscription_path(@subscription), method: :delete
+          - else
+            = link_to 'Subscribe', question_subscriptions_path(@question), method: :post
+        - if can? :destroy, @question
+          .edit-delete
+          = link_to 'Edit question', '', class: 'edit-question-link',
+            data: { question_id: @question.id }
+          '
+          = link_to 'Delete question', @question, method: :delete
+          = form_for @question, remote: true, html: { id: 'edit-question' } do |f|
+            .form-group
+              = f.label :title, 'Question tilte'
+              = f.text_field :title, class: 'form-control'
+            .form-group
+              = f.label :body, 'Question body'
+              = f.text_area :body, class: 'form-control'
+            .form-group
+              = f.fields_for :attachments do |a|
+                = render 'common/attachment_fields', f: a
+              .links
+                = link_to_add_association 'add file', f, :attachments, partial: 'common/attachment_fields'
+            .form-group
+              = f.submit 'Save question', class: 'btn btn-primary', id: 'question-update-submit'
+
+      h4 Answers
+      .answers
+        ul.answers-list
+          = render @question.answers
+      - if user_signed_in?
+        = form_for [@question, answer = @question.answers.new], remote: true do |f|
+          .answer-errors
           .form-group
-            = f.label :title, 'Question tilte'
-            = f.text_field :title, class: 'form-control'
-          .form-group
-            = f.label :body, 'Question body'
+            = f.label :body, 'Answer'
             = f.text_area :body, class: 'form-control'
           .form-group
-            = f.fields_for :attachments do |a|
-              = render 'common/attachment_fields', f: a
+          = f.fields_for :attachments, answer.attachments.build do |a|
+            = render 'common/attachment_fields', f: a
             .links
               = link_to_add_association 'add file', f, :attachments, partial: 'common/attachment_fields'
           .form-group
-            = f.submit 'Save question', class: 'btn btn-primary', id: 'question-update-submit'
-
-    h4 Answers
-    .answers
-      ul.answers-list
-        = render @question.answers
-    - if user_signed_in?
-      = form_for [@question, answer = @question.answers.new], remote: true do |f|
-        .answer-errors
-        .form-group
-          = f.label :body, 'Answer'
-          = f.text_area :body, class: 'form-control'
-        .form-group
-        = f.fields_for :attachments, answer.attachments.build do |a|
-          = render 'common/attachment_fields', f: a
-          .links
-            = link_to_add_association 'add file', f, :attachments, partial: 'common/attachment_fields'
-        .form-group
-          = f.submit 'Create answer', class: 'btn btn-primary'
+            = f.submit 'Create answer', class: 'btn btn-primary'
