add helper to generate cache key

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,4 +1,4 @@
-- cache answer
+- cache user_cache_key_for answer
   div class='answer' id="answer-#{answer.id}" data-id="#{answer.id}"
     li.list-group-item
       div id="rate-answer-#{answer.id}"
